package es.ull.practica04.Strategy;

public class ChartAbstractFactory {
    String title;

}
