@startuml

title __STRATEGY's Class Diagram__\n

  namespace es.ull.practica03.Strategy {
    class es.ull.practica03.Strategy.BarChart {
        + BarChart()
        + display()
    }
  }
  

  namespace es.ull.practica03.Strategy {
    class es.ull.practica03.Strategy.BarChartDataBase {
        + createDataBase()
    }
  }
  

  namespace es.ull.practica03.Strategy {
    class es.ull.practica03.Strategy.CSVFile {
        {static} + SEPARATOR : String
        - headers : ArrayList<String>
        - records : ArrayList<ArrayList<String>>
        + CSVFile()
        + getHeaders()
        + getSize()
        + getValue()
        + getValuesNonRepeated()
    }
  }
  

  namespace es.ull.practica03.Strategy {
    abstract class es.ull.practica03.Strategy.Chart {
        ~ xAxis : int
        ~ yAxis : int
        + Chart()
        {abstract} + display()
    }
  }
  

  namespace es.ull.practica03.Strategy {
    class es.ull.practica03.Strategy.ChartAbstractFactory {
    }
  }
  

  namespace es.ull.practica03.Strategy {
    class es.ull.practica03.Strategy.HTTPFileDownloader {
        {static} - BUFFER_SIZE : int
        {static} + downloadFromURL()
        - HTTPFileDownloader()
    }
  }
  

  namespace es.ull.practica03.Strategy {
    class es.ull.practica03.Strategy.LineChart {
        + LineChart()
        + display()
    }
  }
  

  namespace es.ull.practica03.Strategy {
    class es.ull.practica03.Strategy.LineChartDataBase {
        + createDataBase()
    }
  }
  

  namespace es.ull.practica03.Strategy {
    class es.ull.practica03.Strategy.Main {
        {static} + main()
    }
  }
  

  namespace es.ull.practica03.Strategy {
    interface es.ull.practica03.Strategy.iCreateDataBase {
        {abstract} + createDataBase()
    }
  }
  

  es.ull.practica03.Strategy.BarChart -up-|> es.ull.practica03.Strategy.Chart
  es.ull.practica03.Strategy.BarChartDataBase .up.|> es.ull.practica03.Strategy.iCreateDataBase
  es.ull.practica03.Strategy.Chart -up-|> org.jfree.ui.ApplicationFrame
  es.ull.practica03.Strategy.Chart o-- es.ull.practica03.Strategy.iCreateDataBase : createDataBase
  es.ull.practica03.Strategy.LineChart -up-|> es.ull.practica03.Strategy.Chart
  es.ull.practica03.Strategy.LineChartDataBase .up.|> es.ull.practica03.Strategy.iCreateDataBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
